[package]
name = "terrarium"
version = "0.1.0"
authors = ["cphos", "Zyansheep"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = { version = "2.33.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bitflags = "1.2.1"
tokio = { version = "0.2.21", features = ["full"] }
tokio-tcp = "0.1.4"
variant-encoding = { git = "https://github.com/zyansheep/variant-encoding" }
