[package]
name = "terrarium"
version = "0.1.0"
authors = ["cphos", "Zyansheep"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = { version = "2.33.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bitflags = "1.2.1"
tokio = { version = "0.2.21", features = ["full"] }
variant-encoding = { git = "https://github.com/zyansheep/variant-encoding" }
bytes = "0.5.5"
tokio-util = { version = "0.3.1", features = ["codec"] }
futures-sink = "0.3.5"
futures = "0.3.5"
log = "0.4.8"
env_logger = "0.7.1"
thiserror = "1.0.20"