[package]
name = "rand_enum_derive"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.34"
quote = "1.0.7"
proc-macro2 = "1.0.18"
